--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
+:root {
+  --primary-color: #047aed;
+}
+
 /* allows to add padding without having to add to the width to the element*/
 * {
   box-sizing: border-box;
@@ -37,8 +41,9 @@ img {
   width: 100%;
 }
 
+/* Navbar */
 .navbar {
-  background-color: #047aed;
+  background-color: var(--primary-color);
   color: white;
   height: 70px;
 }
@@ -61,6 +66,28 @@ img {
   justify-content: space-between;
 }
 
+/* Showcase */
+.showcase {
+  height: 400px;
+  background-color: var(--primary-color);
+  color: white;
+  position: relative;
+}
+
+.showcase h1 {
+  font-size: 40px;
+}
+
+.showcase p {
+  margin: 20px 0;
+}
+
+.showcase grid {
+  grid-template-columns: 55% 45%;
+  gap: 30px;
+}
+
+/* Utilities */
 .container {
   max-width: 1100px;
   margin: 0 auto;
@@ -73,4 +100,22 @@ img {
   justify-content: center;
   align-items: center;
   height: 100%;
+}
+
+.grid {
+  display: flex;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.card {
+  background-color: white;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 10px;
 }
